common/force-app/main/default/objects/Product2/fields/House_Size__c.field-meta.xml
<CustomField>
    <fullName>House_Size__c</fullName>
    <label>House Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>