common/force-app/main/default/objects/Product2/fields/IM_PDS_CSF_Offer__c.field-meta.xml
<CustomField>
    <fullName>IM_PDS_CSF_Offer__c</fullName>
    <description>Link to approved/Final document only</description>
    <label>IM/PDS/CSF Offer</label>
    <type>Url</type>
</CustomField>