common/force-app/main/default/objects/Product2/fields/Information_Memorandum__c.field-meta.xml
<CustomField>
    <fullName>Information_Memorandum__c</fullName>
    <description>GSL Wholesale Product Invest Now</description>
    <label>Information Memorandum</label>
    <type>Url</type>
</CustomField>