common/force-app/main/default/objects/Product2/fields/Inside_Spa_IF__c.field-meta.xml
<CustomField>
    <fullName>Inside_Spa_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Inside Spa</label>
    <type>Checkbox</type>
</CustomField>