common/force-app/main/default/objects/Product2/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <inlineHelpText>Interest Rate of the Product</inlineHelpText>
    <label>Interest Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>