common/force-app/main/default/objects/Product2/fields/Invest_Now_Page__c.field-meta.xml
<CustomField>
    <fullName>Invest_Now_Page__c</fullName>
    <label>Invest Now Page</label>
    <type>Url</type>
</CustomField>