common/force-app/main/default/objects/Product2/fields/Investment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Investment_Contract__c</fullName>
    <description>this field is utilised on Invest Now page</description>
    <label>Investment Contract</label>
    <type>Url</type>
</CustomField>