common/force-app/main/default/objects/Product2/fields/Investment_Contract_Text__c.field-meta.xml
<CustomField>
    <fullName>Investment_Contract_Text__c</fullName>
    <inlineHelpText>This text will be merged onto community pages</inlineHelpText>
    <label>Investment Contract Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>