common/force-app/main/default/objects/Product2/fields/Investment_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product_Type__c</fullName>
    <inlineHelpText>This is the structure in which the investment will be made.</inlineHelpText>
    <label>Investment Product Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>