common/force-app/main/default/objects/Product2/fields/Investor_ID__c.field-meta.xml
<CustomField>
    <fullName>Investor_ID__c</fullName>
    <displayFormat>INVID-{0000}</displayFormat>
    <label>Investor ID</label>
    <type>AutoNumber</type>
</CustomField>