common/force-app/main/default/objects/Product2/fields/IS_Document_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>IS_Document_Download_URL__c</fullName>
    <label>Email DP Link</label>
    <type>Url</type>
</CustomField>