common/force-app/main/default/objects/Product2/fields/IS_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>IS_Image_URL__c</fullName>
    <label>Email  Banner Image</label>
    <type>Url</type>
</CustomField>