common/force-app/main/default/objects/Product2/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>