common/force-app/main/default/objects/Product2/fields/Key_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Key_Highlights__c</fullName>
    <inlineHelpText>This field is used to add the key investment highlights about the product.
Is is also used to pull this information into certain Marketing Cloud emails. Please keep this field clean of errors and written in  the context of an investor reading it.</inlineHelpText>
    <label>Key Highlights</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>