common/force-app/main/default/objects/Product2/fields/Land_Size__c.field-meta.xml
<CustomField>
    <fullName>Land_Size__c</fullName>
    <label>Land Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>