common/force-app/main/default/objects/Product2/fields/Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Investor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>