common/force-app/main/default/objects/Product2/fields/Listing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Listing_Authority__c</fullName>
    <label>Listing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Conjunctional</fullName>
            </value>
            <value>
                <fullName>Multi List</fullName>
            </value>
            <value>
                <fullName>Sale by Negotiation</fullName>
            </value>
            <value>
                <fullName>Set Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>