common/force-app/main/default/objects/Product2/fields/Marketing_and_Updates__c.field-meta.xml
<CustomField>
    <fullName>Marketing_and_Updates__c</fullName>
    <description>Use this section to add all of the product updates and marketing materials</description>
    <inlineHelpText>Use this section to add all of the product updates and marketing materials. Please ensure that each item is dated</inlineHelpText>
    <label>Marketing and Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>