common/force-app/main/default/objects/Product2/fields/Master_Plan_SP_RP_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan_SP_RP_Number__c</fullName>
    <formula>Masterplan__r.Master_Plan__r.SP_RP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Plan SP/RP Number</label>
    <type>Text</type>
</CustomField>