common/force-app/main/default/objects/Product2/fields/Masterplan__c.field-meta.xml
<CustomField>
    <fullName>Masterplan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Staging plans can be chosen</errorMessage>
        <filterItems>
            <field>Masterplan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Staging Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Masterplan__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>