common/force-app/main/default/objects/Product2/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <description>Product Maturity Date</description>
    <inlineHelpText>Product Maturity Date</inlineHelpText>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>