common/force-app/main/default/objects/Product2/fields/Maximum_LVR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_LVR__c</fullName>
    <label>Maximum LVR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>