common/force-app/main/default/objects/Product2/fields/Maximum_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Subscription__c</fullName>
    <label>Maximum Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>