common/force-app/main/default/objects/Product2/fields/Minimum_Investment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment__c</fullName>
    <label>Minimum Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>