common/force-app/main/default/objects/Product2/fields/Minimum_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Subscription__c</fullName>
    <label>Minimum Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>