common/force-app/main/default/objects/Product2/fields/Monthly_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Distributions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Distributions</label>
    <type>Checkbox</type>
</CustomField>