common/force-app/main/default/objects/Product2/fields/Nominee__c.field-meta.xml
<CustomField>
    <fullName>Nominee__c</fullName>
    <label>Nominee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>