common/force-app/main/default/objects/Product2/fields/Offer_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Launch_Date__c</fullName>
    <description>The date that Capital Raising launched the offer to market</description>
    <label>Offer Launch Date</label>
    <type>DateTime</type>
</CustomField>