common/force-app/main/default/objects/Product2/fields/Online_Tour__c.field-meta.xml
<CustomField>
    <fullName>Online_Tour__c</fullName>
    <label>Online Tour</label>
    <type>Url</type>
</CustomField>