common/force-app/main/default/objects/Product2/fields/Open_Fireplace_HC__c.field-meta.xml
<CustomField>
    <fullName>Open_Fireplace_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Open Fireplace</label>
    <type>Checkbox</type>
</CustomField>