common/force-app/main/default/objects/Product2/fields/Outside_Spa_OF__c.field-meta.xml
<CustomField>
    <fullName>Outside_Spa_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Outside Spa</label>
    <type>Checkbox</type>
</CustomField>