common/force-app/main/default/objects/Product2/fields/Parent_Fund__c.field-meta.xml
<CustomField>
    <fullName>Parent_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Fund</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Parent Fund)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>