common/force-app/main/default/objects/Product2/fields/Pathways_CB__c.field-meta.xml
<CustomField>
    <fullName>Pathways_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Community Benefits</inlineHelpText>
    <label>Pathways</label>
    <type>Checkbox</type>
</CustomField>