common/force-app/main/default/objects/Product2/fields/Pay_TV_Access_IF__c.field-meta.xml
<CustomField>
    <fullName>Pay_TV_Access_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Pay TV Access</label>
    <type>Checkbox</type>
</CustomField>