common/force-app/main/default/objects/Product2/fields/PDS_Part_1__c.field-meta.xml
<CustomField>
    <fullName>PDS_Part_1__c</fullName>
    <inlineHelpText>Retail MIS</inlineHelpText>
    <label>PDS Part 1</label>
    <type>Url</type>
</CustomField>