common/force-app/main/default/objects/Product2/fields/Portal_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Portal_Short_Description__c</fullName>
    <inlineHelpText>Product description on the portfolio page tiles</inlineHelpText>
    <label>Portal Short Description</label>
    <type>TextArea</type>
</CustomField>