common/force-app/main/default/objects/Product2/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>