common/force-app/main/default/objects/Product2/fields/Pre_Emptive_Rights__c.field-meta.xml
<CustomField>
    <fullName>Pre_Emptive_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Emptive Rights</label>
    <type>Checkbox</type>
</CustomField>