common/force-app/main/default/objects/Product2/fields/Pre_Emptive_Rights_Description__c.field-meta.xml
<CustomField>
    <fullName>Pre_Emptive_Rights_Description__c</fullName>
    <label>Pre-Emptive Rights Description</label>
    <type>TextArea</type>
</CustomField>