common/force-app/main/default/objects/Product2/fields/Pre_Money_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Pre_Money_Valuation__c</fullName>
    <label>Pre Money Valuation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>