common/force-app/main/default/objects/Product2/fields/Private_Deal__c.field-meta.xml
<CustomField>
    <fullName>Private_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for private deals that are not to be publicly published on the community site but are visible by invite to the URL.</inlineHelpText>
    <label>Private Deal</label>
    <type>Checkbox</type>
</CustomField>