common/force-app/main/default/objects/Product2/fields/Product_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Product_Dashboard__c</fullName>
    <label>Product Dashboard</label>
    <type>Url</type>
</CustomField>