common/force-app/main/default/objects/Product2/fields/Product_Entity__c.field-meta.xml
<CustomField>
    <fullName>Product_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The company/entity that this product is operated under.</inlineHelpText>
    <label>Product Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Product Entity)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>