common/force-app/main/default/objects/Product2/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <label>Lot/Unit No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>