common/force-app/main/default/objects/Product2/fields/Product_Owner_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Active_Status__c</fullName>
    <formula>Product_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Owner_Active_Status</label>
    <type>Checkbox</type>
</CustomField>