common/force-app/main/default/objects/Product2/fields/Product_Prerequisite__c.field-meta.xml
<CustomField>
    <fullName>Product_Prerequisite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Prerequisite</label>
    <referenceTo>Product_Prerequisite__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>