common/force-app/main/default/objects/Product2/fields/Product_Proposal_Document__c.field-meta.xml
<CustomField>
    <fullName>Product_Proposal_Document__c</fullName>
    <description>Link to the Product Proposal Document</description>
    <label>Product Proposal Document</label>
    <type>Url</type>
</CustomField>