common/force-app/main/default/objects/Product2/fields/Profit_Share__c.field-meta.xml
<CustomField>
    <fullName>Profit_Share__c</fullName>
    <label>Profit Share</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>