common/force-app/main/default/objects/Product2/fields/Property_Images__c.field-meta.xml
<CustomField>
    <fullName>Property_Images__c</fullName>
    <label>Property Images</label>
    <type>Url</type>
</CustomField>