common/force-app/main/default/objects/Product2/fields/Property_Partner__c.field-meta.xml
<CustomField>
    <fullName>Property_Partner__c</fullName>
    <label>Property Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homecorp</fullName>
            </value>
            <value>
                <fullName>LJ Hooker Helensvale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>