common/force-app/main/default/objects/Product2/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acreage/Semi Rural</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>House and Land Packages</fullName>
            </value>
            <value>
                <fullName>Investment Property</fullName>
            </value>
            <value>
                <fullName>Residential Home</fullName>
            </value>
            <value>
                <fullName>Residential Land</fullName>
            </value>
            <value>
                <fullName>Retirement Living</fullName>
            </value>
            <value>
                <fullName>Rural Land</fullName>
            </value>
            <value>
                <fullName>Serviced Apartment</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Unit Block</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>