common/force-app/main/default/objects/Product2/fields/Prospectus_Document__c.field-meta.xml
<CustomField>
    <fullName>Prospectus_Document__c</fullName>
    <label>Prospectus Document</label>
    <type>Url</type>
</CustomField>