common/force-app/main/default/objects/Product2/fields/Publish_on_Community_Site__c.field-meta.xml
<CustomField>
    <fullName>Publish_on_Community_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish on Community Site</label>
    <type>Checkbox</type>
</CustomField>