common/force-app/main/default/objects/Product2/fields/Quarterly_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Distributions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quarterly Distributions</label>
    <type>Checkbox</type>
</CustomField>