common/force-app/main/default/objects/Product2/fields/REA_Link__c.field-meta.xml
<CustomField>
    <fullName>REA_Link__c</fullName>
    <inlineHelpText>Link to the Realestate.com.au listing</inlineHelpText>
    <label>REA Link</label>
    <type>Url</type>
</CustomField>