common/force-app/main/default/objects/Product2/fields/Registration_based_forecast_settlement_d__c.field-meta.xml
<CustomField>
    <fullName>Registration_based_forecast_settlement_d__c</fullName>
    <label>Rego based forecast settlement date</label>
    <type>Date</type>
</CustomField>