common/force-app/main/default/objects/Product2/fields/Related_Investee_Entity__c.field-meta.xml
<CustomField>
    <fullName>Related_Investee_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the relationship to what vehicle the Product needs to be created against and where the investments are going to receive interest or mature.</description>
    <inlineHelpText>This is the relationship to what vehicle the Product needs to be created against and where the investments are going to receive interest or mature.</inlineHelpText>
    <label>Related Investee Entity</label>
    <referenceTo>Investee_Entity__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>