common/force-app/main/default/objects/Product2/fields/Remote_Garage_OF__c.field-meta.xml
<CustomField>
    <fullName>Remote_Garage_OF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outdoor Feature</inlineHelpText>
    <label>Remote Garage</label>
    <type>Checkbox</type>
</CustomField>