common/force-app/main/default/objects/Product2/fields/Requested_Funding_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Requested_Funding_Timeline__c</fullName>
    <label>Requested Funding Timeline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>