common/force-app/main/default/objects/Product2/fields/Reserved_For__c.field-meta.xml
<CustomField>
    <fullName>Reserved_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved For</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Reserved For)</relationshipLabel>
    <relationshipName>Products6</relationshipName>
    <type>Lookup</type>
</CustomField>