common/force-app/main/default/objects/Product2/fields/Reserved_for_Put_Call_Builders__c.field-meta.xml
<CustomField>
    <fullName>Reserved_for_Put_Call_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserved for Put &amp; Call/Builders</label>
    <type>Checkbox</type>
</CustomField>