common/force-app/main/default/objects/Product2/fields/Reverse_Cycle_Air_Conditioning_HC__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Cycle_Air_Conditioning_HC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Heating &amp; Cooling</inlineHelpText>
    <label>Reverse Cycle Air Conditioning</label>
    <type>Checkbox</type>
</CustomField>