common/force-app/main/default/objects/Product2/fields/Rumpus_Room_IF__c.field-meta.xml
<CustomField>
    <fullName>Rumpus_Room_IF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indoor Feature</inlineHelpText>
    <label>Rumpus Room</label>
    <type>Checkbox</type>
</CustomField>