common/force-app/main/default/objects/Product2/fields/Sales_Commission_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Rate_c__c</fullName>
    <formula>Sales_Representative__r.Property_Commission__c</formula>
    <inlineHelpText>Sales Representatives commission percentage Including GST</inlineHelpText>
    <label>Sales Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>