common/force-app/main/default/objects/Product2/fields/Sales_management_administration_fee__c.field-meta.xml
<CustomField>
    <fullName>Sales_management_administration_fee__c</fullName>
    <inlineHelpText>Add the % in numbers only the fee being charged by VCPP for the management of this sale.</inlineHelpText>
    <label>Sales management administration fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>